tests/test_files_pa3/SemanticErrors/ContinueBreakNotLegalTest.ic
class A
{
	static void main(string[] args) { }
	void foo(int z)
	{
		if (z < 5)
		{
		 return;	
		}
		else
		{
			while (z > 0)
			{
				break;
			}
			continue;
		}
	}
}